--- a/memoria/practica1b.tex
+++ b/memoria/practica1b.tex
@@ -284,4 +284,27 @@ Entonces para ejecutar los experimentos de cada algoritmo lo que haremos es \tex
 Estás prácticas han sido implementadas en Python 2.7.6 y ejecutadas sobre un ordenador son S.O. Ubuntu 14.04 LTS, de 8GB de RAM y procesador Intel Core i7-4790 CPU 3.60GHz con 8 núcleos, aunque dado que el código no ha sido paralelizado estos núcleos no han sido explotados al máximo.\\
 
 Debido a algunas complicaciones y a la falta de tiempo he ejecutado los algoritmo con un número máximo de evaluaciones de 5000 en lugar de 15000 lo que se ve reflejado tanto en el tiempo de ejecución: por ejemplo la Búsqueda Tabú tarda aproximadamente un tercio del tiempo ya que como no tiene otro criterio de parada que no sea el número de evaluaciones, la reducción se ve afectada justamente por el número máximo de evaluaciones que se hagan.\\
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=130mm]{graphTasaDentro.png}
+\end{figure}
+
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=130mm]{graphTasaFuera.png}
+\end{figure}
+
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=130mm]{graphTasaReduccion.png}
+\end{figure}
+
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=130mm]{graphTiempos.png}
+\end{figure}
 \end{document}
