--- a/memoria/practica1b.tex
+++ b/memoria/practica1b.tex
@@ -274,7 +274,7 @@ return el conjunto de caracteristicas al que hemos llegado
 
 El código usado en prácticas lo he implementado yo a partir de las explicaciones dadas tanto en clase de prácticas como de teoría sobre los distintos algoritmos, siendo de mucha utilidad los pseudocódigos de las transparencia de teoría así como el esqueme de funcinamiento de las búsqueda tabú, también de las transparencia.\\
 
-La parte que no ha sido implementada por mí es la correspondiente a la implementación de las soluciones, es decir, tanto el KNN como los mecanismos de evaluación de las soluciones. Para ello he usado un módulo de Python llamado scikit cuya documentación la podemos consultar en la siguien web que es la que he consultado yo para poder usar aquello que necesitaba \url{http://scikit-learn.org/stable/documentation.html}, para instalar este módulo en Ubuntu hemos usado el siguiente comando de terminal \textit{pip install -U scikit-learn}. Este módulo nos permite tanto crear un clasificador 3NN con los datos que elijamos y posteriormente etiquetar datos u obtener directamente el porcentaje de acierto para un conjunto de datos.\\
+La parte que no ha sido implementada por mí es la correspondiente a la implementación de las soluciones, es decir, tanto el KNN como los mecanismos de evaluación de las soluciones. Para ello he usado un módulo de Python llamado scikit cuya documentación la podemos consultar en la siguien web que es la que he consultado yo para poder usar aquello que necesitaba \url{http://scikit-learn.org/stable/documentation.html}, para instalar este módulo en Ubuntu hemos usado el siguiente comando de terminal \textit{sudo apt-get install python-scikits-learn}. Este módulo nos permite tanto crear un clasificador 3NN con los datos que elijamos y posteriormente etiquetar datos u obtener directamente el porcentaje de acierto para un conjunto de datos.\\
 
 Además tiene una función para hacer las pruebas Leave One Out dándole un conjunto de datos y nos dice los índices para poder separar el conjunto de datos de aprendizaje en una muestra por un lado y el resto por otro y poder calcular la función objetivo como queremos.\\
 
@@ -286,11 +286,37 @@ Entonces para ejecutar los experimentos de cada algoritmo lo que haremos es \tex
 
 \section{\color[rgb]{0.0,0.0,0.21}Experimentos y análisis de resultados}
 
+\subsection{\color[rgb]{0.0,0.0,0.51}Descripción de los casos del problema empleados y de los valores de los parámetros}
+
+
 Estás prácticas han sido implementadas en Python 2.7.6 y ejecutadas sobre un ordenador son S.O. Ubuntu 14.04 LTS, de 8GB de RAM y procesador Intel Core i7-4790 CPU 3.60GHz con 8 núcleos, aunque dado que el código no ha sido paralelizado estos núcleos no han sido explotados al máximo.\\
 
-Debido a algunas complicaciones y a la falta de tiempo he ejecutado los algoritmo con un número máximo de evaluaciones de 5000 en lugar de 15000 lo que se ve reflejado tanto en el tiempo de ejecución: por ejemplo la Búsqueda Tabú tarda aproximadamente un tercio del tiempo ya que como no tiene otro criterio de parada que no sea el número de evaluaciones, la reducción se ve afectada justamente por el número máximo de evaluaciones que se hagan.\\
+Debido a algunas complicaciones y a la falta de tiempo he ejecutado los algoritmo con un número máximo de evaluaciones de 5000 en lugar de 15000 lo que se ve reflejado en el tiempo de ejecución: por ejemplo la Búsqueda Tabú tarda aproximadamente un tercio del tiempo ya que como no tiene otro criterio de parada que no sea el número de evaluaciones, la reducción se ve afectada justamente por el número máximo de evaluaciones que se hagan.\\
+
+Hemos empleado tres bases de datos distintas, a continuación mencionamos sus tamaños ya que serán interesantes para el posterior análisis de resultados:\\
+
+\begin{itemize}
+\item \textbf{wdbc}: Tenemos \textbf{569} muestras con \textbf{30} características cada una procedentes de imágenes digitalizadas de una masa de mama. Estas muestras se clasifican en \textbf{2} clases distintas.
+\item \textbf{libras}: Aquí tenemos \textbf{360} muestras de \textbf{90} características cada una, éstas muestras son datos de distintos movimientos de la mano que se clasifican en \textbf{15} clases distintas.
+\item \textbf{arritmia}: Los datos de este conjunto son mediciones para determinar la presencia de arritmia cardiaca o no. Tenemos \textbf{386} muestras con \textbf{278} caracterísitcas cada una, a clasificar en \textbf{5} grupos en base al tipo de arritmia que indican los datos de la muestra.
+\end{itemize}
+
+Lo que hemos hecho con los datos ha sido un preprocesado, en primer lugar todos los datos han sido codificados como flotantes (las etiquetas de wdbc eran cadenas de texto y las hemos cambiado por los valores 0 y 1), también hemos puesto la etiqueta en la última columna de la tabla de datos.\\
+
+También hemos normalizado cada una de las columnas de datos (sin contar la de etiquetas) de modos que los valores quedaran en el intervalo [0,1] mediantes la fórmula:\\
+
+\begin{center}
+$x_j^N = \dfrac{x_j - Min_j}{Max_j-Min_j}$ (siendo $Max_j$ y $Min_j$ el máximo y mínimo valor de los datos para la característica j-ésima de las muestras).
+\end{center}
+
+El código empleado para este formateo de los datos está en el fichero \textbf{\textcolor{green}{loader.py}} que se adjunta en la entrega, como podemos ver para realizar la normalización de los datos hemos usado una utilidad del módulo scikit-learn antes mencionado que se llama MinMaxScaler. Y para futuros usos de estos datos normalizados, y con el objetivo de no tener que realizar tales operaciones cada ocasión que queramos usarlos hemos almacenado los arrays de numpy donde hemos almacenado los datos en sendos ficheros con extensión .npy usando la función \textbf{numpy.save}. Estos ficheros son: \textbf{\textcolor{green}{data\_wdbc.npy}}, \textbf{\textcolor{green}{data\_libras.npy}} y \textbf{\textcolor{green}{data\_arrhythmia.npy}}.\\
+
+A continuación hemos elaborado las distintas particiones sobre estos datos que serán utilizadas en los experimentos, para ello hemos elaborado el código recogido en el fichero \textbf{\textcolor{green}{partition\_maker.npy}} donde simplemente tomamos una muestra aleatoria de los índices de los arrays antes generados, teniendo en cuenta que la cantidad de muestras de cada una de las clases en las que se clasifican los datos sea lo más equilibrida posible entre la partición de test y su correspondiente partición de training. La semilla usada para la generación de dichas particiones, y que podemos ver en el fichero mencionado, ha sido la \textbf{12345678}. Nuevamente hemos almacenado cada una de dichas particiones en ficheros .npy, los cuáles están en la carpeta \textbf{\textcolor{green}{partitions}}.\\
+
+Los parámetros empleados en cada uno de los algoritmos son los que se indican en el guión de prácticas con la salvedad de que, como ya hemos dicho, el máximo número de evaluaciones que le hemos permitido realizar a los algoritmo han sido \textbf{5000} en lugar de 15000 por cuestiones de tiempo. Para cada una de las ejecuciones de lo algoritmos inicializamos la semilla aleatoria a \textbf{12345678} nuevamente, esto lo podemos ver en el fichero \textbf{\textcolor{green}{main.py}}.\\
 
 
+\subsection{\color[rgb]{0.0,0.0,0.51}Resultados}
 
 \begin{table}[H]
 \centering
@@ -433,7 +459,27 @@ Partición 5-2                                & 99,29        & 96,14         & 2
 Media                                        & 98,63        & 95,29         & 49,00   & 687,29 & 74,61        & 70,05         & 50,55   & 506,11 & 71,39        & 65,91         & 53,34   & 939,71 \\ \hline
 \end{tabular}}
 \end{table}
-\newpage
+
+% Please add the following required packages to your document preamble:
+% \usepackage{multirow}
+\begin{table}[H]
+\centering
+\caption{Resultados Globales}
+\label{my-label}
+\resizebox{\textwidth}{!}{\begin{tabular}{lllllllllllll}
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{Totales}} & \multicolumn{4}{c|}{Wdbc}                                                                                                           & \multicolumn{4}{c|}{Movement\_Libras}                                                                                               & \multicolumn{4}{c|}{Arrhythmia}                                                                                                \\ \cline{2-13} 
+\multicolumn{1}{|c|}{}                         & \multicolumn{1}{l|}{\%\_clas\_out} & \multicolumn{1}{l|}{\%\_red} & \multicolumn{1}{l|}{T}      & \multicolumn{1}{l|}{\%\_clas\_in} & \multicolumn{1}{l|}{\%\_clas\_out} & \multicolumn{1}{l|}{\%\_red} & \multicolumn{1}{l|}{T}      & \multicolumn{1}{l|}{\%\_clas\_in} & \multicolumn{1}{l|}{\%\_clas\_out} & \multicolumn{1}{l|}{\%\_red} & \multicolumn{1}{l|}{T}      & \multicolumn{1}{l|}{T}       \\ \hline
+\multicolumn{1}{|l|}{3-NN}                     & \multicolumn{1}{l|}{96,412}        & \multicolumn{1}{l|}{95,917}  & \multicolumn{1}{l|}{0}      & \multicolumn{1}{l|}{0}            & \multicolumn{1}{l|}{68,106}        & \multicolumn{1}{l|}{70,607}  & \multicolumn{1}{l|}{0}      & \multicolumn{1}{l|}{0}            & \multicolumn{1}{l|}{63,625}        & \multicolumn{1}{l|}{64,765}  & \multicolumn{1}{l|}{0}      & \multicolumn{1}{l|}{0}       \\ \hline
+\multicolumn{1}{|l|}{SFS}                      & \multicolumn{1}{l|}{97,043}        & \multicolumn{1}{l|}{94,934}  & \multicolumn{1}{l|}{85,996} & \multicolumn{1}{l|}{16,745}       & \multicolumn{1}{l|}{74,274}        & \multicolumn{1}{l|}{66,774}  & \multicolumn{1}{l|}{89,884} & \multicolumn{1}{l|}{62,559}       & \multicolumn{1}{l|}{79,214}        & \multicolumn{1}{l|}{70,308}  & \multicolumn{1}{l|}{97,912} & \multicolumn{1}{l|}{147,213} \\ \hline
+\multicolumn{1}{|l|}{BL}                       & \multicolumn{1}{l|}{97,22}         & \multicolumn{1}{l|}{95,43}   & \multicolumn{1}{l|}{47,00}  & \multicolumn{1}{l|}{7,58}         & \multicolumn{1}{l|}{70,55}         & \multicolumn{1}{l|}{71,00}   & \multicolumn{1}{l|}{45,33}  & \multicolumn{1}{l|}{16,08}        & \multicolumn{1}{l|}{70,15}         & \multicolumn{1}{l|}{65,75}   & \multicolumn{1}{l|}{53,23}  & \multicolumn{1}{l|}{103,23}  \\ \hline
+\multicolumn{1}{|l|}{ES}                       & \multicolumn{1}{l|}{97,61}         & \multicolumn{1}{l|}{95,25}   & \multicolumn{1}{l|}{48,66}  & \multicolumn{1}{l|}{82,09}        & \multicolumn{1}{l|}{71,939}        & \multicolumn{1}{l|}{70,939}  & \multicolumn{1}{l|}{56,107} & \multicolumn{1}{l|}{173,02}       & \multicolumn{1}{l|}{69,477}        & \multicolumn{1}{l|}{65,494}  & \multicolumn{1}{l|}{48,774} & \multicolumn{1}{l|}{771,943} \\ \hline
+\multicolumn{1}{|l|}{BT básica}                & \multicolumn{1}{l|}{98,765}        & \multicolumn{1}{l|}{95,073}  & \multicolumn{1}{l|}{51,663} & \multicolumn{1}{l|}{646,0437}     & \multicolumn{1}{l|}{76,66}         & \multicolumn{1}{l|}{70,941}  & \multicolumn{1}{l|}{55,217} & \multicolumn{1}{l|}{436,677}      & \multicolumn{1}{l|}{73,31}         & \multicolumn{1}{l|}{67,038}  & \multicolumn{1}{l|}{53,698} & \multicolumn{1}{l|}{737,61}  \\ \hline
+\multicolumn{1}{|l|}{BT extendida}             & \multicolumn{1}{l|}{98,625}        & \multicolumn{1}{l|}{95,286}  & \multicolumn{1}{l|}{48,998} & \multicolumn{1}{l|}{687,294}      & \multicolumn{1}{l|}{74,606}        & \multicolumn{1}{l|}{70,051}  & \multicolumn{1}{l|}{50,552} & \multicolumn{1}{l|}{506,1102}     & \multicolumn{1}{l|}{71,393}        & \multicolumn{1}{l|}{65,905}  & \multicolumn{1}{l|}{53,338} & \multicolumn{1}{l|}{939,708} \\ \hline
+\end{tabular}}
+\end{table}
+
+\subsection{\color[rgb]{0.0,0.0,0.51}Análisis de resultados}
 
 \begin{figure}[H]
 \centering
